@@ -95,7 +95,7 @@
 		  	   		<form action="{url./admin/Database/mod}" method="post">
 		  	   			<input type="hidden" name="formcheck" value="{$formcheck}" > 
 		  	   			<div class="layui-form-item">
-		                    <textarea name="sql" placeholder="请粘贴要执行的数据库脚本，可用于系统升级时数据库升级！" class="layui-textarea"></textarea>
+		                    <textarea name="sql" placeholder="请粘贴要执行的数据库脚本！" class="layui-textarea"></textarea>
 		                </div>
 		                <button class="layui-btn" lay-submit type="submit" name="submit" value="sql">执行</button>
 			  	   	</form>
