@@ -1,10 +1,10 @@
 <?php
 return array(
     // 应用版本
-    'app_version' => '1.3.1',
+    'app_version' => '1.3.2',
     
     // 发布时间
-    'release_time' => '20181116'
+    'release_time' => '20181117'
 
 );
  
