@@ -4,10 +4,12 @@
 版权所有：hnaoyun.com
 ##########################################
 
-PbootCMS V1.3.2 build 2018-11-16
+PbootCMS V1.3.2 build 2018-11-17
 1、修复用户名验证规则不统一导致修改特殊字符后无法登陆问题；
 2、修复js无法获取到点赞及反对cookie的问题；
 3、修复content标签无法使用scode调取单页问题；
+4、新增start=*设置数据列表起始数据；
+5、加强后台执行数据库脚本功能的安全性；
 
 PbootCMS V1.3.1 build 2018-11-14
 1、优化在线升级功能；
